--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,10 +1,10 @@
 /* This file is for your main application (s)css. */
 
 $cenatus-blue: #6CA8DC;
-$cenatus-light-grey: #FAFBFC;
+$cenatus-light-grey: #ccc;
 $cenatus-light-blue: #BAD5ED;
 $cenatus-font-color: #4A4A4A;
-$cenatus-font-size:16px;
+$cenatus-font-size: 16px;
 $cenatus-line-height: 30px;
 
 // These are Bootstrap defaults
@@ -37,8 +37,14 @@ body {
   padding-right: 5%;
 }
 
-.container, .container-fluid {
-  h1, h2, h3, h4, h5 {
+.container,
+.container-fluid {
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5 {
     font-weight: bold;
     color: $cenatus-blue;
   }
@@ -85,15 +91,19 @@ body {
 }
 
 /* Phoenix flash messages */
-.alert:empty { display: none; }
+.alert:empty {
+  display: none;
+}
 
 header {
   @include divider;
 
   .row {
-    .logo, .category {
+
+    .logo,
+    .category {
       display: flex;
-    	align-items: center;
+      align-items: center;
       // justify-content: center;
 
       height: 140px;
@@ -104,12 +114,14 @@ header {
 
     .logo {
       background-color: white;
+
       // border: 1px solid red;
       svg {
         // border: 1px solid green;
         width: 130%;
         margin-left: -5%;
       }
+
       img {
         height: 110px;
         margin-left: -30px;
@@ -125,6 +137,7 @@ header {
       display: block;
       font-size: 22px;
       font-weight: 500;
+
       &:hover {
         text-decoration: none;
       }
@@ -160,12 +173,21 @@ table.articles {
   }
 }
 
-main, header, footer {
+main,
+header,
+footer {
   visibility: hidden;
 }
 
-article.preview, article.show, main {
-  h1, h2, h3, h4, .tag_page_title {
+article.preview,
+article.show,
+main {
+
+  h1,
+  h2,
+  h3,
+  h4,
+  .tag_page_title {
     padding-top: 20px;
     padding-bottom: 20px;
     padding-right: 50px;
@@ -174,7 +196,7 @@ article.preview, article.show, main {
     text-overflow: ellipsis;
   }
 
-  img{
+  img {
     width: 100%;
   }
 
@@ -186,14 +208,15 @@ article.preview, article.show, main {
     }
   }
 
-  .summary, .content {
+  .summary,
+  .content {
     padding-bottom: 20px;
     padding-right: 50px;
   }
 }
 
 article.show {
-  img:not(.header){
+  img:not(.header) {
     @media (min-width: map-get($grid-breakpoints, md)) {
       width: 50%;
     }
@@ -214,7 +237,7 @@ article.show {
   }
 }
 
-.blog-articles > div.row {
+.blog-articles>div.row {
   &:last-child {
     margin-bottom: 0px !important;
 
@@ -225,18 +248,19 @@ article.show {
 }
 
 
-.map-responsive{
-    overflow:hidden;
-    padding-bottom:56.25%;
-    position:relative;
-    height:0;
+.map-responsive {
+  overflow: hidden;
+  padding-bottom: 56.25%;
+  position: relative;
+  height: 0;
 }
-.map-responsive iframe{
-    left:0;
-    top:0;
-    height:100%;
-    width:100%;
-    position:absolute;
+
+.map-responsive iframe {
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  position: absolute;
 }
 
 
@@ -254,6 +278,7 @@ article.show {
         font-size: smaller;
         color: #ccc;
       }
+
       a {
         max-width: 80%;
         white-space: nowrap;
@@ -264,12 +289,16 @@ article.show {
       }
     }
   }
+
   .last-fm {
     .track {
       .glyphicon {
         font-size: smaller;
         color: #ccc;
       }
+
+      list-style: none;
+
       a {
         max-width: 80%;
         white-space: nowrap;
@@ -277,6 +306,7 @@ article.show {
         text-overflow: ellipsis;
         display: inline-block;
         vertical-align: bottom;
+        // color: $cenatus-light-grey;
       }
     }
   }
@@ -294,7 +324,9 @@ article.show {
   }
 }
 
-.tags, .tech_tags, .categories {
+.tags,
+.tech_tags,
+.categories {
   font-size: $cenatus-font-size - 2;
   line-height: $cenatus-line-height - 5;
 
@@ -302,18 +334,21 @@ article.show {
     display: inline-block;
   }
 
-  .tag, .category {
+  .tag,
+  .category {
     &:before {
       content: ", "
     }
 
-    &:first-of-type{
+    &:first-of-type {
       &:before {
         content: ""
       }
     }
+
     a {
       color: $cenatus-font-color;
+
       &:hover {
         color: $cenatus-font-color;
       }
@@ -329,7 +364,7 @@ article.show {
   display: none;
   // display: flex;
   height: 100%;
-  width : 100%;
+  width: 100%;
   align-items: center;
   justify-content: center;
   background-color: black;
@@ -338,6 +373,7 @@ article.show {
   a {
     font-size: xx-large;
     color: white;
+
     &:hover {
       color: white;
       text-decoration: none;
@@ -360,9 +396,12 @@ $related_padding: 20%;
   padding-top: 0px;
   border: 0px solid red;
 
-  h2, h3, h4 {
+  h2,
+  h3,
+  h4 {
     padding-left: $related_padding - 8%;
   }
+
   ul {
     list-style-type: square;
     padding-left: $related_padding;
@@ -374,7 +413,8 @@ $related_padding: 20%;
   color: blue;
 }
 
-textarea#article_content.form-control, textarea#article_summary.form-control {
+textarea#article_content.form-control,
+textarea#article_summary.form-control {
   height: 300px;
 }
 
@@ -383,9 +423,10 @@ footer {
     @include divider-top;
     padding-bottom: 20px;
 
-    .address, .links {
+    .address,
+    .links {
       display: flex;
-    	align-items: center;
+      align-items: center;
       height: 120px;
       color: $cenatus-blue;
     }
@@ -401,6 +442,7 @@ footer {
     a {
       color: $cenatus-blue;
       display: block;
+
       &:hover {
         text-decoration: none;
       }
@@ -422,21 +464,21 @@ footer {
 /* ----------- iPhone 5 and 5S ----------- */
 
 /* Portrait and Landscape */
-@media only screen
-  and (min-device-width: 320px)
-  and (max-device-width: 568px)
-  and (-webkit-min-device-pixel-ratio: 2) {
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
 
   header {
     .row {
       padding-top: 30px;
+
       .logo {
         height: 40px;
+
         svg {
           width: 80%;
           margin: 0 auto;
         }
       }
+
       .category {
         padding-top: 40px;
         padding-bottom: 20px;
@@ -446,12 +488,13 @@ footer {
         // border: 1px solid red;
 
         a {
-            font-size: 17px;
-            // border: 1px solid blue;
-            margin-left: 0px;
+          font-size: 17px;
+          // border: 1px solid blue;
+          margin-left: 0px;
 
         }
       }
+
       .category:first-of-type {
         border: 0px;
       }
@@ -474,21 +517,10 @@ footer {
 }
 
 /* Portrait */
-@media only screen
-  and (min-device-width: 320px)
-  and (max-device-width: 568px)
-  and (-webkit-min-device-pixel-ratio: 2)
-  and (orientation: portrait) {
-}
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {}
 
 /* Landscape */
-@media only screen
-  and (min-device-width: 320px)
-  and (max-device-width: 568px)
-  and (-webkit-min-device-pixel-ratio: 2)
-  and (orientation: landscape) {
-
-}
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: landscape) {}
 
 /* ----------- iPhone 6 ----------- */
 /* iPhone 6 Portrait */
@@ -496,13 +528,16 @@ footer {
   header {
     .row {
       padding-top: 30px;
+
       .logo {
         height: 100px;
+
         svg {
           width: 110%;
           margin: 0 auto;
         }
       }
+
       .category {
         padding-top: 40px;
         padding-bottom: 20px;
@@ -512,20 +547,25 @@ footer {
         // border: 1px solid red;
 
         a {
-            font-size: 17px;
-            // border: 1px solid blue;
-            margin-left: 0px;
+          font-size: 17px;
+          // border: 1px solid blue;
+          margin-left: 0px;
 
         }
       }
+
       .category:first-of-type {
         border: 0px;
       }
     }
   }
 
-  article.preview, article.show, main {
-    .summary, .content {
+  article.preview,
+  article.show,
+  main {
+
+    .summary,
+    .content {
       padding-bottom: 30px;
       padding-right: 0px;
     }
@@ -557,6 +597,7 @@ footer {
         }
 
       }
+
       .category:first-of-type {
         border: 0px;
       }
@@ -566,30 +607,33 @@ footer {
 
 /* ----------- iPad 3 and 4 ----------- */
 /* Portrait and Landscape */
-@media only screen
-  and (min-device-width: 768px)
-  and (max-device-width: 1024px)
-  and (-webkit-min-device-pixel-ratio: 2) {
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 2) {
 
   header {
     .row {
       .logo {
         height: 140px;
       }
+
       .category {
+
         // border: 1px solid red;
-        a {
-        }
+        a {}
 
       }
+
       .category:first-of-type {
         border: 0px;
       }
     }
   }
 
-  article.preview, article.show, main {
-    .summary, .content {
+  article.preview,
+  article.show,
+  main {
+
+    .summary,
+    .content {
       padding-bottom: 50px;
       padding-right: 0px;
     }
@@ -618,38 +662,43 @@ footer {
 /* ----------- iPad mini / 1 & 2 ----------- */
 
 /* Portrait and Landscape */
-@media only screen
-  and (min-device-width: 768px)
-  and (max-device-width: 1024px)
-  and (-webkit-min-device-pixel-ratio: 1) {
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
 
   header {
     .row {
       padding-top: 30px;
+
       .logo {
         border: 0px solid red;
         height: 140px;
         margin-bottom: 40px;
+
         svg {
           width: 110%
         }
       }
+
       .category {
         padding-bottom: 20px;
         height: 40px;
+
         // border: 1px solid red;
-        a {
-        }
+        a {}
 
       }
+
       .category:first-of-type {
         border: 0px;
       }
     }
   }
 
-  article.preview, article.show, main {
-    .summary, .content {
+  article.preview,
+  article.show,
+  main {
+
+    .summary,
+    .content {
       padding-bottom: 40px;
       padding-right: 0px;
     }
@@ -676,26 +725,24 @@ footer {
 }
 
 /* Landscape */
-@media only screen
-  and (min-device-width: 768px)
-  and (max-device-width: 1024px)
-  and (orientation: landscape)
-  and (-webkit-min-device-pixel-ratio: 1) {
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1) {
 
   header {
     .row {
       .logo {
         border: 0px solid red;
+
         svg {
           // border: 1px solid green;
           width: 100%;
         }
       }
+
       .category {
         border: 0px solid green;
         padding-top: 75px;
-        a {
-        }
+
+        a {}
       }
     }
   }
@@ -706,37 +753,37 @@ footer {
 /* Effect 1: Brackets */
 .cl-effect-1 a::before,
 .cl-effect-1 a::after {
-	// display: inline-block;
-	opacity: 0;
-	-webkit-transition: -webkit-transform 0.3s, opacity 0.2s;
-	-moz-transition: -moz-transform 0.3s, opacity 0.2s;
-	transition: transform 0.3s, opacity 0.2s;
+  // display: inline-block;
+  opacity: 0;
+  -webkit-transition: -webkit-transform 0.3s, opacity 0.2s;
+  -moz-transition: -moz-transform 0.3s, opacity 0.2s;
+  transition: transform 0.3s, opacity 0.2s;
 }
 
 .cl-effect-1 a::before {
-	margin-right: 10px;
-	content: '[';
-	-webkit-transform: translateX(20px);
-	-moz-transform: translateX(20px);
-	transform: translateX(20px);
+  margin-right: 10px;
+  content: '[';
+  -webkit-transform: translateX(20px);
+  -moz-transform: translateX(20px);
+  transform: translateX(20px);
 }
 
 .cl-effect-1 a::after {
-	margin-left: 10px;
-	content: ']';
-	-webkit-transform: translateX(-20px);
-	-moz-transform: translateX(-20px);
-	transform: translateX(-20px);
+  margin-left: 10px;
+  content: ']';
+  -webkit-transform: translateX(-20px);
+  -moz-transform: translateX(-20px);
+  transform: translateX(-20px);
 }
 
 .cl-effect-1 a:hover::before,
 .cl-effect-1 a:hover::after,
 .cl-effect-1 a:focus::before,
 .cl-effect-1 a:focus::after {
-	opacity: 1;
-	-webkit-transform: translateX(0px);
-	-moz-transform: translateX(0px);
-	transform: translateX(0px);
+  opacity: 1;
+  -webkit-transform: translateX(0px);
+  -moz-transform: translateX(0px);
+  transform: translateX(0px);
 }
 
 /* END Effect 1: Brackets */
