Fix Discus comments

--- a/lib/cenatus_ltd_web/templates/blog/show.html.heex
+++ b/lib/cenatus_ltd_web/templates/blog/show.html.heex
@@ -30,7 +30,7 @@
   <div class="col-md-12">
     <%= render CenatusLtdWeb.SharedView, "article.html", article: @article, current_user: @current_user, conn: @conn %>
 
-    <div id="#disqus_thread" class="mt-4 mb-5"></div>
+    <div id="disqus_thread" class="mt-4 mb-5"></div>
 
     <script type='text/javascript'>
       var disqus_config = function () {
