--- a/lib/cenatus_ltd_web/templates/layout/_head.html.heex
+++ b/lib/cenatus_ltd_web/templates/layout/_head.html.heex
@@ -15,7 +15,8 @@
   <title>Cenatus</title>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"  integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
   <link rel="stylesheet" href={ Routes.static_path(@conn, "/css/app.css") } />
 
   <%= csrf_meta_tag() %>
