--- a/lib/cenatus_ltd_web/templates/layout/_navbar.html.heex
+++ b/lib/cenatus_ltd_web/templates/layout/_navbar.html.heex
@@ -12,7 +12,7 @@
 
       <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
         <div class="offcanvas-header">
-          <h3 class="offcanvas-title" id="offcanvasNavbarLabel">Cenatus</h3>
+          <h2 class="offcanvas-title text-center w-100" id="offcanvasNavbarLabel">Cenatus</h2>
           <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
@@ -27,7 +27,7 @@
 
           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
             <%= for menu_item <- [:creative, :technology, :production] do %>
-            <li class="nav-item cl-effect-1 text-nowrap me-lg-5 py-3 py-lg-0 ">
+            <li class="nav-item cl-effect-1 text-nowrap me-lg-5 py-2 py-lg-0 ">
               <a href={"/#{menu_item}"}
                 aria-current={CenatusLtdWeb.NavView.is_active?(:aria, @conn, menu_item)}
                 class={"nav-link #{CenatusLtdWeb.NavView.is_active?(:link, @conn, menu_item)}"}>
