--- a/lib/cenatus_ltd_web/templates/section/index.html.eex
+++ b/lib/cenatus_ltd_web/templates/section/index.html.eex
@@ -14,7 +14,7 @@
           <span class="bold"><%= section.name %></span>
       </td>
 
-      <td class="text-right">
+      <td class="text-end">
         <%= link "Show", to: Routes.section_path(@conn, :show, section), class: "btn btn-default btn-xs" %>
         <%= link "Edit", to: Routes.section_path(@conn, :edit, section), class: "btn btn-default btn-xs" %>
         <%= link "Delete", to: Routes.section_path(@conn, :delete, section), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs" %>
