--- a/lib/cenatus_ltd_web/templates/blog/blog_article_preview.html.heex
+++ b/lib/cenatus_ltd_web/templates/blog/blog_article_preview.html.heex
@@ -19,7 +19,7 @@
 
             <a href={Routes.blog_path(@conn, :show, @article)}> more > </a>
 
-            <p class="published my-0 pr-3 text-right smaller">
+            <p class="published my-0 pr-3 text-end smaller">
               Published on
               <%= @article.published_at |> formatted %>
             </p>
