--- a/lib/cenatus_ltd_web/templates/category/index.html.eex
+++ b/lib/cenatus_ltd_web/templates/category/index.html.eex
@@ -14,7 +14,7 @@
           <span class="bold"><%= category.name %></span>
       </td>
 
-      <td class="text-right">
+      <td class="text-end">
         <%= link "Show", to: Routes.category_path(@conn, :show, category), class: "btn btn-default btn-xs" %>
         <%= link "Edit", to: Routes.category_path(@conn, :edit, category), class: "btn btn-default btn-xs" %>
         <%= link "Delete", to: Routes.category_path(@conn, :delete, category), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs" %>
