--- a/lib/cenatus_ltd_web/templates/user/index.html.eex
+++ b/lib/cenatus_ltd_web/templates/user/index.html.eex
@@ -17,7 +17,7 @@
       <td><%= user.username %></td>
       <td><%= user.password_hash %></td>
 
-      <td class="text-right">
+      <td class="text-end">
         <%= link "Show", to: Routes.user_path(@conn, :show, user), class: "btn btn-default btn-xs" %>
         <%= link "Edit", to: Routes.user_path(@conn, :edit, user), class: "btn btn-default btn-xs" %>
         <%= link "Delete", to: Routes.user_path(@conn, :delete, user), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs" %>
