--- a/lib/cenatus_ltd_web/templates/layout/_navbar.html.heex
+++ b/lib/cenatus_ltd_web/templates/layout/_navbar.html.heex
@@ -12,8 +12,11 @@
 
       <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
         <div class="offcanvas-header">
-          <h2 class="offcanvas-title text-center w-100" id="offcanvasNavbarLabel">Cenatus</h2>
-          <button type="button" class="btn-close me-2" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          <header class="w-100">
+            <button type="button" class="btn-close me-2" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            <h2 class="offcanvas-title text-center w-100 mb-4" id="offcanvasNavbarLabel">Cenatus</h2>
+
+          </header>
         </div>
         <div class="offcanvas-body">
           <%!-- <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
@@ -25,17 +28,60 @@
             </li>
           </ul> --%>
 
-          <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-            <%= for menu_item <- [:creative, :technology, :production] do %>
-            <li class="nav-item cl-effect-1 text-nowrap me-lg-5 py-2 py-lg-0 ">
-              <a href={"/#{menu_item}"}
-                aria-current={CenatusLtdWeb.NavView.is_active?(:aria, @conn, menu_item)}
-                class={"nav-link #{CenatusLtdWeb.NavView.is_active?(:link, @conn, menu_item)}"}>
-                <%= menu_item %>
+          <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 mb-4 mb-lg-0">
+
+            <li class="nav-item cl-effect-1 text-nowrap me-lg-5 py-2 py-lg-0">
+              <a href="/"
+                aria-current={CenatusLtdWeb.NavView.is_active?(:aria, @conn, "home")}
+                class={"nav-link #{CenatusLtdWeb.NavView.is_active?(:link, @conn, "home")}"}>
+                home
               </a>
             </li>
+
+            <%= for menu_item <- [:creative, :technology, :production] do %>
+              <li class="nav-item cl-effect-1 text-nowrap me-lg-5 py-2 py-lg-0">
+                <a href={"/#{menu_item}"}
+                  aria-current={CenatusLtdWeb.NavView.is_active?(:aria, @conn, menu_item)}
+                  class={"nav-link #{CenatusLtdWeb.NavView.is_active?(:link, @conn, menu_item)}"}>
+                  <%= menu_item %>
+                </a>
+              </li>
             <% end %>
           </ul>
+
+          <footer class="d-lg-none d-xl-none">
+            <div class="sidebar">
+              <div class="links pt-0">
+                <ul class="w-100">
+                  <li>
+                    <a href="/about" class="fs-6">about</a>
+                  </li>
+                  <li> | </li>
+                  <li>
+                    <a href={Routes.blog_path(@conn, :index)} class="fs-6">blog</a>
+                  </li>
+                  <li> | </li>
+                  <li>
+                    <a href="https://www.specificfeeds.com/cenatus" class="fs-6">rss</a>
+                  </li>
+                  <li> | </li>
+                  <li>
+                    <a href="https://www.specificfeeds.com/cenatus?subParam=followPub" class="fs-6">subs</a>
+                  </li>
+                  <li> | </li>
+                  <li>
+                    <a href="/contact" class="fs-6">contact</a>
+                  </li>
+                  <%#
+                  <li> | </li>
+                  <li>
+                    <a href="https://madmimi.com/signups/subscribe/27129" target="_blank">subscribe</a>
+                  </li>
+                  %>
+                </ul>
+              </div>
+            </div>
+          </footer>
         </div>
       </div>
     </div>
