--- a/lib/cenatus_ltd_web/templates/layout/_navbar.html.heex
+++ b/lib/cenatus_ltd_web/templates/layout/_navbar.html.heex
@@ -30,7 +30,7 @@
 
           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 mb-4 mb-lg-0">
 
-            <li class="nav-item cl-effect-1 text-nowrap me-lg-5 py-2 py-lg-0">
+            <li class="nav-item cl-effect-1 text-nowrap me-lg-5 py-2 py-lg-0 d-lg-none d-xl-none">
               <a href="/"
                 aria-current={CenatusLtdWeb.NavView.is_active?(:aria, @conn, "home")}
                 class={"nav-link #{CenatusLtdWeb.NavView.is_active?(:link, @conn, "home")}"}>
