--- a/lib/cenatus_ltd_web/templates/layout/_navbar.html.heex
+++ b/lib/cenatus_ltd_web/templates/layout/_navbar.html.heex
@@ -14,22 +14,15 @@
         <div class="offcanvas-header">
           <header class="w-100">
             <button type="button" class="btn-close me-2" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-            <h2 class="offcanvas-title text-center w-100 mb-4" id="offcanvasNavbarLabel">Cenatus</h2>
+            <a href="/">
+              <h2 class="offcanvas-title text-center w-100 mb-4" id="offcanvasNavbarLabel">Cenatus</h2>
+            </a>
 
           </header>
         </div>
         <div class="offcanvas-body">
 
           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 mb-4 mb-lg-0">
-
-            <li class="nav-item cl-effect-1 text-nowrap me-lg-5 py-2 py-lg-0 d-lg-none d-xl-none">
-              <a href="/"
-                aria-current={CenatusLtdWeb.NavView.is_active?(:aria, @conn, "home")}
-                class={"nav-link #{CenatusLtdWeb.NavView.is_active?(:link, @conn, "home")}"}>
-                home
-              </a>
-            </li>
-
             <%= for menu_item <- [:creative, :technology, :production] do %>
               <li class="nav-item cl-effect-1 text-nowrap me-lg-5 py-2 py-lg-0">
                 <a href={"/#{menu_item}"}
