--- a/lib/cenatus_ltd_web/templates/layout/app.html.heex
+++ b/lib/cenatus_ltd_web/templates/layout/app.html.heex
@@ -18,6 +18,7 @@
     <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
 
     <main role="main">
+      <%= render("_spinner.html") %>
       <%= @inner_content %>
     </main>
 
