DRY related content

--- a/lib/cenatus_ltd_web/templates/article/show.html.heex
+++ b/lib/cenatus_ltd_web/templates/article/show.html.heex
@@ -5,24 +5,20 @@
     </article>
   </div>
 
-  <div class="col-md-6 related">
-    <%= if length(@related) > 0 do %>
-      <h3 class="lp">related articles</h3>
-      <ul>
-        <%= for related <- @related do %>
-          <li>
-            <a href={Routes.article_path(@conn, :show, related)} >
-              <%= related.title %>
-            </a>
-          </li>
-        <% end %>
-      </ul>
-    <% end %>
-  </div>
+  <%= render CenatusLtdWeb.SharedView, "related.html",
+        related: @related,
+        title: "related articles",
+        article_type: :article,
+        conn: @conn
+  %>
 </div>
 
 <div class="row">
   <div class="col-md-12">
-    <%= render CenatusLtdWeb.SharedView, "article.html", article: @article, current_user: @current_user, conn: @conn %>
+    <%= render CenatusLtdWeb.SharedView, "article.html",
+          article: @article,
+          current_user: @current_user,
+          conn: @conn
+    %>
   </div>
 </div>
