--- a/lib/cenatus_ltd_web/templates/blog/blog_article_preview.html.heex
+++ b/lib/cenatus_ltd_web/templates/blog/blog_article_preview.html.heex
@@ -8,7 +8,7 @@
           </a>
         </div>
         <div class="col-12 col-md-8">
-          <h4 class="lp">
+          <h4 class="">
             <a href={Routes.blog_path(@conn, :show, @article)} class="link">
               <%= @article.title %>
             </a>
