--- a/lib/cenatus_ltd_web/templates/blog/show.html.heex
+++ b/lib/cenatus_ltd_web/templates/blog/show.html.heex
@@ -5,30 +5,21 @@
     </article>
   </div>
 
-  <div class="col-md-6 related">
-    <%= if length(@related) > 0 do %>
-      <h3 class="lp">related posts</h3>
-      <ul>
-        <%= for related <- @related do %>
-          <li>
-            <a href={Routes.blog_path(@conn, :show, related)} >
-              <%= related.title %>
-            </a>
-          </li>
-        <% end %>
-        <li>
-          <a href={Routes.blog_path(@conn, :index)} >
-            All posts
-          </a>
-        </li>
-      </ul>
-    <% end %>
-  </div>
+  <%= render CenatusLtdWeb.SharedView, "related.html",
+        related: @related,
+        title: "related posts",
+        article_type: :blog,
+        conn: @conn
+  %>
 </div>
 
 <div class="row">
   <div class="col-md-12">
-    <%= render CenatusLtdWeb.SharedView, "article.html", article: @article, current_user: @current_user, conn: @conn %>
+    <%= render CenatusLtdWeb.SharedView, "article.html",
+          article: @article,
+          current_user: @current_user,
+          conn: @conn
+    %>
 
     <div id="disqus_thread" class="mt-4 mb-5"></div>
 
