--- a/lib/cenatus_ltd_web/templates/layout/_footer.html.heex
+++ b/lib/cenatus_ltd_web/templates/layout/_footer.html.heex
@@ -1,9 +1,9 @@
 <footer>
   <div class="row justify-content-between">
-    <div class="col-xs-12 col-md-4 address">
+    <div class="col-xs-12 col-md-4 address my-4 my-md-0">
       <%= render CenatusLtdWeb.SharedView, "address.html" %>
     </div>
-    <div class="col-xs-12 col-md-4 links">
+    <div class="col-xs-12 col-md-4 links d-none d-md-block d-lg-block">
       <ul>
         <li>
           <a href="/about">about</a>
