--- a/lib/cenatus_ltd_web/templates/layout/_spinner.html.heex
+++ b/lib/cenatus_ltd_web/templates/layout/_spinner.html.heex
@@ -1,4 +1,5 @@
 <div id="spinner">
+  <div id="spinner-wrapper">
     <%!-- https://github.com/n3r4zzurr0/svg-spinners/tree/main --%>
     <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
         <style>
@@ -55,5 +56,6 @@
             <rect x="11" y="1" width="2" height="5" transform="rotate(180 12 12)" />
         </g>
     </svg>
+  </div>
 </div>
 
