--- a/lib/cenatus_ltd_web/templates/layout/_navbar.html.heex
+++ b/lib/cenatus_ltd_web/templates/layout/_navbar.html.heex
@@ -15,7 +15,7 @@
           <header class="w-100">
             <button type="button" class="btn-close me-2" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             <a href="/">
-              <h2 class="offcanvas-title text-center w-100 mb-4" id="offcanvasNavbarLabel">Cenatus</h2>
+              <h3 class="offcanvas-title text-center w-100 mb-4" id="offcanvasNavbarLabel">Cenatus</h3>
             </a>
 
           </header>
@@ -25,11 +25,11 @@
           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 mb-4 mb-lg-0">
             <%= for menu_item <- [:creative, :technology, :production] do %>
               <li class="nav-item cl-effect-1 text-nowrap me-lg-5 py-2 py-lg-0">
-                <a href={"/#{menu_item}"}
-                  aria-current={CenatusLtdWeb.NavView.is_active?(:aria, @conn, menu_item)}
-                  class={"nav-link #{CenatusLtdWeb.NavView.is_active?(:link, @conn, menu_item)}"}>
-                  <%= menu_item %>
-                </a>
+                  <a href={"/#{menu_item}"}
+                    aria-current={CenatusLtdWeb.NavView.is_active?(:aria, @conn, menu_item)}
+                    class={"nav-link #{CenatusLtdWeb.NavView.is_active?(:link, @conn, menu_item)}"}>
+                    <%= menu_item %>
+                  </a>
               </li>
             <% end %>
           </ul>
@@ -39,23 +39,23 @@
               <div class="links pt-0">
                 <ul class="w-100">
                   <li>
-                    <a href="/about" class="fs-6">about</a>
+                    <a href="/about" class="fs-5">about</a>
                   </li>
-                  <li> | </li>
+                  <li class="fs-5"> | </li>
                   <li>
-                    <a href={Routes.blog_path(@conn, :index)} class="fs-6">blog</a>
+                    <a href={Routes.blog_path(@conn, :index)} class="fs-5">blog</a>
                   </li>
-                  <li> | </li>
+                  <li class="fs-5"> | </li>
                   <li>
-                    <a href="https://www.specificfeeds.com/cenatus" class="fs-6">rss</a>
+                    <a href="https://www.specificfeeds.com/cenatus" class="fs-5">rss</a>
                   </li>
-                  <li> | </li>
+                  <li class="fs-5"> | </li>
                   <li>
-                    <a href="https://www.specificfeeds.com/cenatus?subParam=followPub" class="fs-6">subs</a>
+                    <a href="https://www.specificfeeds.com/cenatus?subParam=followPub" class="fs-5">subs</a>
                   </li>
-                  <li> | </li>
+                  <li class="fs-5"> | </li>
                   <li>
-                    <a href="/contact" class="fs-6">contact</a>
+                    <a href="/contact" class="fs-5">contact</a>
                   </li>
                   <%#
                   <li> | </li>
