--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -176,12 +176,8 @@ table.articles {
     background-color: #ccc;
   }
 
-  tr.body {
-    margin-bottom: 100px;
-  }
-
-  .image {
-    width: 30%;
+  img {
+    width: 250px;
   }
 }
 
