--- a/lib/cenatus_ltd_web/templates/article/index.html.eex
+++ b/lib/cenatus_ltd_web/templates/article/index.html.eex
@@ -1,46 +1,49 @@
-<h2>Listing articles</h2>
+<div class="row">
+  <div class="col">
 
-<table class="articles table">
-  <thead>
-    <tr>
-      <th></th>
-      <th></th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-<%= for article <- @articles do %>
-    <tr class="heading">
-      <td colspan="2">
-          <span class="bold"><%= article.title %></span>
-      </td>
-      <td colspan="1">
-          <span class="bold"><%= formatted(article.published_at) %></span>
-      </td>
-      <td class="actions text-end" colspan="1">
-        <%= link "Show", to: Routes.article_path(@conn, :show, article), class: "btn btn-default btn-xs" %>
-        <%= link "Edit", to: Routes.article_path(@conn, :edit, article), class: "btn btn-default btn-xs" %>
-        <%= link "Delete", to: Routes.article_path(@conn, :delete, article), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs" %>
-      </td>
-    </tr>
-    <tr class="body">
-      <td class="image">
-        <img src='<%= article.image_url %>' />
-      </td>
-      <td title="<%= article.summary %>" >
-        <%= String.slice(article.summary, 0..250) %>
-      </td>
-      <td title="<%= article.content %>" ><%= String.slice(article.content, 0..250) %></td>
-      <td>
-        <%= tags_list(article.tags) %>
-        <br/><br/><br/>
-        <%= tags_list(article.tech_tags) %>
-      </td>
-    </tr>
-<% end %>
-  </tbody>
-</table>
+    <h2>Listing articles</h2>
+    <div class="w-100 text-end">
+      <%= link "New article", to: Routes.article_path(@conn, :new) %>
+    </div>
 
-<%= link "New article", to: Routes.article_path(@conn, :new) %>
+    <div class="table-responsive">
+      <table class="articles table">
+        <thead>
+          <tr>
+            <th colspan="4"></th>
+          </tr>
+        </thead>
+        <tbody>
+          <%= for article <- @articles do %>
+              <tr class="heading">
+                <td colspan="1" class="text-align-left">
+                    <span class="bold"><%= formatted(article.published_at) %></span>
+                </td>
+                <td colspan="1">
+                    <span class="bold"><%= article.title %></span>
+                </td>
+                <td class="actions text-end" colspan="2">
+                  <%= link "Show", to: Routes.article_path(@conn, :show, article), class: "btn btn-default btn-xs" %>
+                  <%= link "Edit", to: Routes.article_path(@conn, :edit, article), class: "btn btn-default btn-xs" %>
+                  <%= link "Delete", to: Routes.article_path(@conn, :delete, article), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs" %>
+                </td>
+              </tr>
+              <tr class="body">
+                <td class="image">
+                  <img src='<%= article.image_url %>' />
+                </td>
+                <td title="<%= article.content %>" >
+                  <%= String.slice(article.content, 0..250) %>
+                </td>
+                <td>
+                  <%= tags_list(article.tags) %>
+                  <br/><br/><br/>
+                  <%= tags_list(article.tech_tags) %>
+                </td>
+              </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
