Tidy article page

--- a/lib/cenatus_ltd_web/templates/layout/_navbar.html.heex
+++ b/lib/cenatus_ltd_web/templates/layout/_navbar.html.heex
@@ -35,7 +35,7 @@
           </ul>
 
           <footer class="d-lg-none d-xl-none">
-            <div class="sidebar">
+            <div class="sidebar mx-3">
               <div class="links pt-0">
                 <ul class="w-100">
                   <li>
