--- a/lib/cenatus_ltd_web/templates/shared/article.html.heex
+++ b/lib/cenatus_ltd_web/templates/shared/article.html.heex
@@ -1,5 +1,5 @@
-<article class="show">
-  <h3 class="lp">
+<article class="show pt-md-4 pe-md-5">
+  <h3 class="">
     <%= @article.title %>
     <%= if @current_user do %>
       <a class="smaller" href= {Routes.article_path(@conn, :edit, @article)}>
@@ -8,56 +8,56 @@
     <% end %>
   </h3>
 
-  <div class="content lp mb-2 mb-md-4">
+  <div class="content mb-2 mb-md-4">
     <%= @article.content |> as_html %>
   </div>
 
-  <p class="lp nbm tags smaller">
-    Section:
-    <span class="bold">
+  <p class="nbm tags smaller">
+    section:
+    <span class="text-lowercase">
       <%= @article.section.name %>
     </span>
   </p>
   <%= if @article.category do %>
-    <p class="lp nbm tags smaller">
-      Category:
+    <p class="nbm tags smaller text-lowercase">
+      category:
       <%= CenatusLtdWeb.ArticleView.render_categories_as_links_from(@conn, [@article.category]) %>
     </p>
   <% end %>
   <%= if length(@article.tags) > 0 do %>
-    <p class="lp nbm tags smaller">
-      Filed as:
-      [<%= CenatusLtdWeb.ArticleView.render_tags_as_links_from(@conn, @article.tags) %>]
+    <p class="nbm tags smaller text-lowercase">
+      filed as:
+      <%= CenatusLtdWeb.ArticleView.render_tags_as_links_from(@conn, @article.tags) %>
     </p>
   <% end %>
 
-  <p class="lp ml-md-3 mt-4 published smaller">
-    Published on
+  <p class="ml-md-3 mt-4 published smaller">
+    published on
       <%= @article.published_at |> formatted %>
   </p>
 
 </article>
 
 <%= if Enum.any?(@article.tags, fn a -> a.name == "dycp" end) do %>
-  <p class="lp my-4 mt-md-4 smaller">
+  <p class="my-4 mt-md-4 smaller">
     This project is gratefully supported by the Arts Council England as part of their
     <a href="https://www.artscouncil.org.uk/DYCP"> DYCP.</a>
     fund.
   </p>
 
   <a href="https://www.artscouncil.org.uk/DYCP", target="BLANK">
-    <img class="lp my-md-2 partner-logo" alt="ACE DYCP" src="https://www.artscouncil.org.uk/sites/default/files/download-file/grant_jpeg_black.jpg" />
+    <img class="my-md-2 partner-logo" alt="ACE DYCP" src="https://www.artscouncil.org.uk/sites/default/files/download-file/grant_jpeg_black.jpg" />
   </a>
 <% end %>
 
 <%= if Enum.any?(@article.tags, fn a -> a.name == "cif2021" end) do %>
-  <p class="lp my-4 mt-md-4 smaller">
+  <p class="my-4 mt-md-4 smaller">
     This project is gratefully supported by
     <a href="https://www.ukri.org/councils/innovate-uk"> Innovate UK</a>, the UK’s innovation agency.
   </p>
 
   <a href="https://www.ukri.org/councils/innovate-uk", target="BLANK">
-    <img class="lp my-md-2 partner-logo" alt="Innovate UK" src="https://res.cloudinary.com/cenatus/image/upload/c_thumb,w_400,g_face/v1635182320/UKRI_logo_bcsbmd.png" />
+    <img class="my-md-2 partner-logo" alt="Innovate UK" src="https://res.cloudinary.com/cenatus/image/upload/c_thumb,w_400,g_face/v1635182320/UKRI_logo_bcsbmd.png" />
   </a>
 <% end %>
 
