--- a/lib/cenatus_ltd_web/templates/blog/blog_article_preview.html.heex
+++ b/lib/cenatus_ltd_web/templates/blog/blog_article_preview.html.heex
@@ -1,14 +1,14 @@
 <div class="row mb-4">
   <div class="col-md-12">
     <article class="preview pb-3">
-      <div class="row align-items-center">
-        <div class="col-12 col-md-4 p-md-3">
+      <div class="row align-items-stretch">
+        <div class="col-12 col-xl-4 pe-md-3">
           <a href={Routes.blog_path(@conn, :show, @article)} class="link">
             <img data-src={@article.image_url} class='cld-responsive' />
           </a>
         </div>
-        <div class="col-12 col-md-8">
-          <h4 class="">
+        <div class="col-12 col-xl-8">
+          <h4 class="pb-md-2 pt-xl-0">
             <a href={Routes.blog_path(@conn, :show, @article)} class="link">
               <%= @article.title %>
             </a>
