--- a/lib/cenatus_ltd_web/templates/shared/tweets.html.heex
+++ b/lib/cenatus_ltd_web/templates/shared/tweets.html.heex
@@ -1,4 +1,4 @@
-<% if length(@tweets) > 0 do %>
+<%= if length(@tweets) > 0 do %>
   <ul>
     <%= for tweet <- @tweets do %>
       <li class="tweet">
